# Convergence_Bfloat

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md
datasets/Best_case/: plot_average.py  plot_minmax.py
datasets/Comparison_big2small/: plot_comparison.py
datasets/Comparison_u-11_BC/: plot_comparison.py
datasets/Normal_N(0,1)/: matrix_average.csv  matrix_frobenius.csv  scalar_frobenius.csv  scalar_total.csv  vector_average.csv  vector_frobenius.csv  vector_total.csv
datasets/Uniform-1,1/: plot_average.py  plot_minmax.py
datasets/Uniform0,max/: plot_average.py
datasets/Uniform1,2/: plot_average.py  plot_minmax.py
datasets/Uniform_[-1,1]/: matrix_frobenius.csv  matrix_total.csv  scalar_average.csv  scalar_frobenius.csv  vector_average.csv  vector_frobenius.csv  vector_total.csv
datasets/result/: plot.py  plot_repeat.py
datasets/uniform-1,1_big2small/: plot_average.py  plot_minmax.py
datasets/uniform0,max_big2small/: plot_average.py  plot_minmax.py
src/: .gitignore  CMakeLists.txt  build.sh  driver.cpp  main.cpp  run.sh  vector.cpp
src/bfloat/: CMakeLists.txt  bfloat.cpp  bfloat.hpp  bfloat.test.cpp  vanilla.hpp  xsmm.hpp
src/io/: CMakeLists.txt  io.hpp
src/kernel/: CMakeLists.txt  MMxsmm.cpp  MMxsmm.hpp  MMxsmm.test.cpp  bfloat.hpp  vanilla.cpp  vanilla.hpp  vanilla.test.cpp  vector_bfloat.hpp
src/measurement/: CMakeLists.txt  measurement.cpp  measurement.hpp
src/setup/: CMakeLists.txt  setup.cpp  setup.hpp
submodules/libxsmm/share/libxsmm/: build.txt
submodules/libxsmm/usr/local/include/: libxsmm.f
submodules/libxsmm/usr/local/lib/: libxsmm.env  libxsmm.pc  libxsmmext.pc  libxsmmf.pc  libxsmmnoblas.pc
submodules/libxsmm/usr/local/share/libxsmm/: build.txt
test/: CMakeLists.txt  MMxsmm.test.cpp  MMxsmm_benchmark.test.cpp  bfloat.test.cpp  vanilla.test.cpp
